[gd_scene load_steps=7 format=3 uid="uid://cbijtmv151qg7"]

[ext_resource type="Theme" uid="uid://pt1hrfiuwfpg" path="res://theme_base/theme.tres" id="1_wbo0e"]
[ext_resource type="Script" uid="uid://b2n3ovynlg2e1" path="res://src/ui_components/player_profile/transfers/visual_buy_offer/visual_buy_offer.gd" id="2_2p6ux"]
[ext_resource type="PackedScene" uid="uid://bheddn7ywomo6" path="res://src/ui_components/base/custom_tab_container/custom_tab_container.tscn" id="3_wbo0e"]
[ext_resource type="PackedScene" uid="uid://c12fh0nafttdk" path="res://src/ui_components/base/money_edit/money_edit.tscn" id="4_kmj1m"]
[ext_resource type="PackedScene" uid="uid://b2mwv4cl5sm6t" path="res://src/ui_components/base/swtich_option_button/switch_option_button.tscn" id="5_5dllx"]
[ext_resource type="Script" uid="uid://cnyyowwlb04kl" path="res://src/ui_components/base/defaults/default_button.gd" id="6_kbryc"]

[node name="VisualBuyOffer" type="VBoxContainer"]
custom_minimum_size = Vector2(960, 0)
anchors_preset = -1
anchor_right = 0.5
anchor_bottom = 0.41
offset_bottom = 0.199982
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("1_wbo0e")
script = ExtResource("2_2p6ux")

[node name="CustomTabContainer" parent="." instance=ExtResource("3_wbo0e")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="Buy" type="VBoxContainer" parent="CustomTabContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0

[node name="BuyDescription" type="Label" parent="CustomTabContainer/Buy"]
unique_name_in_owner = true
layout_mode = 2
text = "Make an offer to buy the player."

[node name="Money" type="HBoxContainer" parent="CustomTabContainer/Buy"]
layout_mode = 2

[node name="MoneyLabel" type="Label" parent="CustomTabContainer/Buy/Money"]
layout_mode = 2
size_flags_horizontal = 3
text = "Money"

[node name="BuyMoney" parent="CustomTabContainer/Buy/Money" instance=ExtResource("4_kmj1m")]
unique_name_in_owner = true
layout_mode = 2

[node name="Date" type="HBoxContainer" parent="CustomTabContainer/Buy"]
layout_mode = 2

[node name="DateLabel" type="Label" parent="CustomTabContainer/Buy/Date"]
layout_mode = 2
size_flags_horizontal = 3
text = "Date"

[node name="BuyDate" parent="CustomTabContainer/Buy/Date" instance=ExtResource("5_5dllx")]
unique_name_in_owner = true
layout_mode = 2

[node name="Loan" type="VBoxContainer" parent="CustomTabContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(960, 0)
layout_mode = 2
size_flags_vertical = 0
theme = ExtResource("1_wbo0e")

[node name="LoanDescription" type="Label" parent="CustomTabContainer/Loan"]
unique_name_in_owner = true
layout_mode = 2
text = "Make an offer to get the player on loan."

[node name="Duration" type="HBoxContainer" parent="CustomTabContainer/Loan"]
layout_mode = 2

[node name="DurationLabel" type="Label" parent="CustomTabContainer/Loan/Duration"]
layout_mode = 2
size_flags_horizontal = 3
text = "Loan duration"

[node name="LoanDuration" parent="CustomTabContainer/Loan/Duration" instance=ExtResource("5_5dllx")]
unique_name_in_owner = true
layout_mode = 2

[node name="Salary" type="HBoxContainer" parent="CustomTabContainer/Loan"]
layout_mode = 2

[node name="SalaryLabel" type="Label" parent="CustomTabContainer/Loan/Salary"]
layout_mode = 2
size_flags_horizontal = 3
text = "Salary percentage"

[node name="Salary" parent="CustomTabContainer/Loan/Salary" instance=ExtResource("5_5dllx")]
unique_name_in_owner = true
layout_mode = 2

[node name="Money" type="HBoxContainer" parent="CustomTabContainer/Loan"]
layout_mode = 2

[node name="MoneyLabel" type="Label" parent="CustomTabContainer/Loan/Money"]
layout_mode = 2
size_flags_horizontal = 3
text = "Additional money"

[node name="LoanMoney" parent="CustomTabContainer/Loan/Money" instance=ExtResource("4_kmj1m")]
unique_name_in_owner = true
layout_mode = 2

[node name="Confirm" type="Button" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(240, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"ImportantButton"
text = "Confirm"
script = ExtResource("6_kbryc")
metadata/_custom_type_script = "uid://cnyyowwlb04kl"

[connection signal="pressed" from="Confirm" to="." method="_on_confirm_pressed"]
